Creates DisplaySeries component, fixes styling for header and footer to fix overlap. Adds display to app.jsx and formats all documents. All tests going green.

--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,36 @@
 .display-show {
   display: inline-block;
   width: 23%;
-  width: calc(25% - ( ( 20px ) * 0.75 ) );
+  width: calc(25% - ((20px) * 0.75));
   margin-right: 20px;
   margin-bottom: 20px;
 }
 
-.display-show:nth-child(4n+4) {
+.display-show:nth-child(4n + 4) {
   margin-right: 0;
 }
 
 .display-show img {
   width: 100%;
   height: auto;
+  margin-top: 25px;
 }
 
 .header {
   background-color: #222d34;
   width: 100%;
   height: 10%;
-  position: fixed;
-  
 }
 
 .footer {
   background-color: #202c32;
   width: 100%;
+  min-height: 100vh;
   position: fixed;
 }
 
 .header img {
   padding-top: 5px;
   padding-left: 10%;
-  width: 20%
+  width: 20%;
 }
